public/stylesheets/style.css
/*  HTML5 ✰ Boilerplate  */

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,  footer, header, hgroup, 
menu, nav, section, summary, time, mark, audio, video {
  margin:0;
  padding:0;
  border:0;
  outline:0;
  font-size:100%;
  vertical-align:baseline;
  background:transparent;
}                  
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { 
    display:block;
}
nav ul { list-style:none; }
blockquote, q { quotes:none; }
blockquote:before, blockquote:after,
q:before, q:after { content:''; content:none; }
a { margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent; }
ins { background-color:#ff9; color:#000; text-decoration:none; }
mark { background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
del { text-decoration: line-through; }
abbr[title], dfn[title] { border-bottom:1px dotted; cursor:help; }
table { border-collapse:collapse; border-spacing:0; }
hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; }
input, select { vertical-align:middle; }


body { font:13px/1.231 sans-serif; *font-size:small; } 
select, input, textarea, button { font:99% sans-serif; }
pre, code, kbd, samp { font-family: monospace, sans-serif; }

body, select, input, textarea {   color: #444; }
h1,h2,h3,h4,h5,h6 { font-weight: bold; }
html { overflow-y: scroll; }

a:hover, a:active { outline: none; }
a, a:active, a:visited { color: #607890; }
a:hover { color: #036; }

ul, ol { margin-left: 1.8em; }
ol { list-style-type: decimal; }

nav ul, nav li { margin: 0; } 
small { font-size: 85%; }
strong, th { font-weight: bold; }
td, td img { vertical-align: top; } 
sub { vertical-align: sub; font-size: smaller; }
sup { vertical-align: super; font-size: smaller; }
pre {  padding: 15px;  white-space: pre;  white-space: pre-wrap;  white-space: pre-line;  word-wrap: break-word; }
textarea { overflow: auto; } 
.ie6 legend, .ie7 legend { margin-left: -7px; } 
input[type="radio"] { vertical-align: text-bottom; }
input[type="checkbox"] { vertical-align: bottom; }
.ie7 input[type="checkbox"] { vertical-align: baseline; }
.ie6 input { vertical-align: text-bottom; }
label, input[type=button], input[type=submit], button { cursor: pointer; }
button, input, select, textarea { margin: 0; }
input:valid, textarea:valid   {  }
input:invalid, textarea:invalid { border-radius: 1px;  -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red;  box-shadow: 0px 0px 5px red; }
.no-boxshadow input:invalid, 
.no-boxshadow textarea:invalid { background-color: #f0dddd; }

::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
::selection { background:#FF5E99; color:#fff; text-shadow: none; } 
a:link { -webkit-tap-highlight-color: #FF5E99; } 

button {  width: auto; overflow: visible; }
.ie7 img { -ms-interpolation-mode: bicubic; }

.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
.hidden { display: none; visibility: hidden; } 
.visuallyhidden { position: absolute !important; clip: rect(1px 1px 1px 1px);  clip: rect(1px, 1px, 1px, 1px); }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after {  content: "\0020"; display: block; height: 0; visibility: hidden;	 } 
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }


 /* Primary Styles
    Author: 
 */
 
body {
    background: #FDFDFD;
    font-family: 'Droid Serif', serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 0.063em;
    line-height: 1.2;
}
#main {
    min-height: 900px;
}

#main>article {
    position: relative;
    overflow: hidden;
}

article, footer {
    padding: 20px;
    text-align: center;
}

article img {
    -webkit-transition: all 1s ease-in-out;
    -moz-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    
    -moz-border-radius: 3px; 
    -webkit-border-radius: 3px; 
    border-radius: 3px; 
    border: 20px solid #ffffff;
    -moz-box-shadow: 0px 10px 34px #CDCDCD; /* FF3.5+ */
    -webkit-box-shadow: 0px 10px 34px #CDCDCD; /* Saf3.0+, Chrome */
    box-shadow: 0px 10px 34px #CDCDCD; /* Opera 10.5, IE9 */
}

article img:hover,
a.nav-link:hover {
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    
    -moz-box-shadow: 0px 10px 34px #8A8A8A; /* FF3.5+ */
    -webkit-box-shadow: 0px 10px 34px #8A8A8A; /* Saf3.0+, Chrome */
    box-shadow: 0px 10px 34px #8A8A8A; /* Opera 10.5, IE9 */
}

img#photo {
    max-height: 700px;
}

article footer {
    margin-top: 20px;
}

#archive {
    margin-top: 20px;
}
#archive article {
    float: left;
}

h1 {
    text-shadow: 0px 1px 1px #A7A7A7;
    font-size: 18px;
}

a, a:visited{
    color: #A5397C;
}
a:hover {
    color: #770E54;
    text-decoration: none;
}

#container>footer {
    width: 250px;
    margin: 0 auto;
    font-size: 12px;
    position: relative;
}

a.nav-link {
    -webkit-transition: all 1s ease-in-out;
    -moz-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    border: 20px solid #ffffff;
    -moz-box-shadow: 0px 10px 34px #CDCDCD; /* FF3.5+ */
    -webkit-box-shadow: 0px 10px 34px #CDCDCD; /* Saf3.0+, Chrome */
    box-shadow: 0px 10px 34px #CDCDCD; /* Opera 10.5, IE9 */
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    width: 75px;
    height: 75px;
    display: block;
    margin-bottom: 20px;
}
a.nav-link img {
    display:none;
}
a.nav-link:hover img{
    display:inline;
}

#next {
    float: right;
}
#prev {
    float: left;
}

#powered {
    margin-top: 20px;
    font-size: 10px;
    color: #DFDFDF;
}
#powered a {
    color: #B7B7B7;
}

/* Random rotate classes */
.rotate0{
    -moz-transform:    rotate(-1deg);
    -o-transform:      rotate(-1deg);
    -webkit-transform: rotate(-1deg);
    -ms-transform:     rotate(-1deg);
    transform:         rotate(-1deg);
}
.rotate1{
    -moz-transform:    rotate(0.5deg);
    -o-transform:      rotate(0.5deg);
    -webkit-transform: rotate(0.5deg);
    -ms-transform:     rotate(0.5deg);
    transform:         rotate(0.5deg);
}
.rotate2{
    -moz-transform:    rotate(-.3deg);
    -o-transform:      rotate(-.3deg);
    -webkit-transform: rotate(-.3deg);
    -ms-transform:     rotate(-.3deg);
    transform:         rotate(-.3deg);
}
.rotate3{
    -moz-transform:    rotate(1deg);
    -o-transform:      rotate(1deg);
    -webkit-transform: rotate(1deg);
    -ms-transform:     rotate(1deg);
    transform:         rotate(1deg);
}

@media all and (orientation:portrait) { 
  
}

@media all and (orientation:landscape) { 
  
}

@media screen and (max-device-width: 480px) {
  
  
  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
}

@media print {
  * { background: transparent !important; color: #444 !important; text-shadow: none !important; }
  a, a:visited { color: #444 !important; text-decoration: underline; }
  a:after { content: " (" attr(href) ")"; } 
  abbr:after { content: " (" attr(title) ")"; }
  .ir a:after { content: ""; }  
  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
  thead { display: table-header-group; }  
  tr, img { page-break-inside: avoid; }
  @page { margin: 0.5cm; }
  p, h2, h3 { orphans: 3; widows: 3; }
  h2, h3{ page-break-after: avoid; }
}


.isotope,
.isotope .isotope-item {
  /* change duration value to whatever you like */
  -webkit-transition-duration: 0.8s;
     -moz-transition-duration: 0.8s;
          transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
     -moz-transition-property: height, width;
          transition-property: height, width;
}

.isotope .isotope-item {
  -webkit-transition-property: -webkit-transform, opacity;
     -moz-transition-property:    -moz-transform, opacity;
          transition-property:         transform, opacity;
}

* slightly enhanced, universal clearfix hack */
.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }
.clearfix { display: inline-block; }
/* start commented backslash hack \*/
* html .clearfix { height: 1%; }
.clearfix { display: block; }
/* close commented backslash hack */


.tipsy { padding: 5px; font-size: 10px; opacity: 0.8; filter: alpha(opacity=80); background-repeat: no-repeat;  background-image: url(../images/tipsy.gif); }
.tipsy-inner { padding: 5px 8px 4px 8px; background-color: black; color: white; max-width: 200px; text-align: center; }
.tipsy-inner { -moz-border-radius:3px; -webkit-border-radius:3px; }
.tipsy-north { background-position: top center; }
.tipsy-south { background-position: bottom center; }
.tipsy-east { background-position: right center; }
.tipsy-west { background-position: left center; }

